--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@remix-run/node": "^2.0.1",
     "@remix-run/react": "^2.0.1",
     "@remix-run/serve": "^2.0.1",
+    "@remix-run/vercel": "^1.19.3",
+    "@vercel/remix": "^2.0.1",
     "axios": "^1.5.1",
     "isbot": "^3.7.0",
     "react": "^18.2.0",
@@ -16,6 +18,7 @@
   },
   "type": "module",
   "scripts": {
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "build": "remix build"
   }
 }
